charts/demo-value-project/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coe-demo-value
  namespace: argocd
spec:
  selector:
    app: coe-demo-value
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
